Implement GetScreenBounds to get window sizing and staggering working. We return the origin of the entire window (title bar and all) but the size of the content area. This is to match Carbon behavior and make everything work nicely. However, this is silly and confusing and we should do away with it in the future. b=330581 r=stuart